--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -7,15 +7,15 @@
     <string name="xposed_not_active">Η τελευταία έκδοση του Xposed δεν είναι ενεργή προς το παρόν. Εγκαταστήσατε το Framework και επανεκκινήσατε;</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="tabDownload">Κατέβασμα</string>
     <string name="welcome_framework_update_available">Μία αναβάθμιση για το Xposed Framework είναι διαθέσιμη.</string>
+
+    <!-- Navigation drawer items -->
 
     <!-- Installer tab -->
     <string name="install">Εγκατάσταση/Αναβάθμιση</string>
     <string name="uninstall">Απεγκατάσταση</string>
     <string name="soft_reboot">Soft reboot</string>
     <string name="reboot">Reboot</string>
-    <string name="phone_not_compatible">Το Xposed δεν είναι (ακόμα) συμβατό με την έκδοση %1$d του Android SDK ή την αρχιτεκτονική (%2$s) του επεξεργαστή σας.</string>
     <string name="reboot_failed">To reboot απέτυχε. Παρακαλώ χρησιμοποιήστε την κανονική λειτουργία reboot της συσκευής σας.</string>
     <string name="auto_flash_note">Το %s πρέπει να γίνει flash αυτόματα μόλις πατήσετε "OK".</string>
     <string name="reboot_confirmation">Θέλετε να κάνετε reboot τώρα;</string>
@@ -95,8 +95,6 @@
     <string name="settings_group_experimental">Πειραματικό</string>
     <string name="settings_disable_resources">Απενεργοποίηση resource hooks</string>
     <string name="settings_disable_resources_summary">Χακεριά για συγκρούσεις με theming engines\n<b>ΠΡΟΣΟΧΗ:</b>Τα modules που προσπαθούν να αλλάξουν resources δεν θα δουλέψουν όταν αυτό είναι ενεργοποιημένο.</string>
-    <string name="settings_performance_experiment">Πείραμα έπίδοσης</string>
-    <string name="settings_performance_experiment_summary">Αν ενεργοποιήσετε αυτήν την επιλογή, η επίδοση του συστήματος σας μπορεί είτε να μεγαλώσει, είτε να μικραίνει ή να μείνει ίδια. Δοκιμάστε το ελεύθερα και αναφέρετε τι αποτέλεσμα έχει (ή το ότι δεν έχει αποτέλεσμα). Μπορείτε να επαναεγκαταστήσετε το Framework και να επανεκκινήσετε αφού αλλάξετε αυτήν την επιλογή.</string>
     <string name="settings_group_app">Εφαρμογή</string>
     <string name="settings_theme">Θέμα</string>
     <string name="settings_theme_light">Φωτεινό</string>
@@ -142,5 +140,14 @@
     <string name="repo_download_failed_http">Το κατέβασμα %1$s απέτυχε: %2$d (%3$s)</string>
     <string name="repo_download_failed">Το κατέβασμα %1$s απέτυχε: %2$s</string>
     <string name="repo_load_failed">Αδυναμία φόρτωσης αποθετηρίου (repository) από %1$s:\n%2$s</string>
+
+
+
+
+
+
+
+
+
 
 </resources>
