--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -4,15 +4,15 @@
     <!-- General/various strings -->
 
     <!-- Welcome screen / main sections -->
-    <string name="tabDownload">Descarga</string>
     <string name="welcome_framework_update_available">Unha actualización está dispoñible para Xposed Framework.</string>
+
+    <!-- Navigation drawer items -->
 
     <!-- Installer tab -->
     <string name="install">Instalar/Actualizar</string>
     <string name="uninstall">Desinstalar</string>
     <string name="soft_reboot">Reinicie Software</string>
     <string name="reboot">Reinicie</string>
-    <string name="phone_not_compatible">Xposed non é (aínda) compatible coa versión do Android SDK %1$d ou arquitectura de procesador (%2$s).</string>
 
     <!-- File operations -->
 
@@ -51,8 +51,6 @@
     <!-- Settings tab -->
     <string name="settings_group_download">Descargar</string>
     <string name="settings_group_experimental">Experimental</string>
-    <string name="settings_performance_experiment">Performance experiment</string>
-    <string name="settings_performance_experiment_summary">Se permitir tanto, o rendemento do sistema pode aumentar, diminuír ou permanecer o mesmo. Síntase libre para probar e informar o efecto do que é (ou se non hai ningún efecto). Ten que reinstalar o Stock Framework e reiniciar despois de cambiar esto.</string>
 
     <!-- Support tab -->
 
@@ -87,5 +85,14 @@
     <string name="repo_download_failed_http">Descargando %1$s fallido: %2$d (%3$s)</string>
     <string name="repo_download_failed">Descargando %1$s fallido: %2$s</string>
     <string name="repo_load_failed">Non se puido cargar o repositorio do %1$s:\n%2$s</string>
+
+
+
+
+
+
+
+
+
 
 </resources>
