--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -7,15 +7,25 @@
     <string name="xposed_not_active">L\'ultima versione di Xposed al momento non è attiva. Hai installato il Framework e riavviato?</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="tabDownload">Download</string>
     <string name="welcome_framework_update_available">È disponibile un aggiornamento per il Framework Xposed.</string>
+    <string name="modules_updates_available">Aggiornamenti dei moduli disponibili</string>
+
+    <!-- Navigation drawer items -->
+    <string name="nav_item_install">Framework</string>
+    <string name="nav_item_modules">Moduli</string>
+    <string name="nav_item_download">Download</string>
+    <string name="nav_item_settings">Impostazioni</string>
+    <string name="nav_item_support">Supporto</string>
+    <string name="nav_item_logs">Logs</string>
+    <string name="nav_item_about">Info su</string>
+    <string name="navigation_drawer_open">Apri navigation drawer</string>
+    <string name="navigation_drawer_close">Chiudi navigation drawer</string>
 
     <!-- Installer tab -->
     <string name="install">Installa/Aggiorna</string>
     <string name="uninstall">Rimuovi</string>
     <string name="soft_reboot">Riavvio soft</string>
     <string name="reboot">Riavvio</string>
-    <string name="phone_not_compatible">Xposed non è (ancora) compatibile con l\'SDK Android %1$d o con l\'architettura (%2$s) del tuo processore.</string>
     <string name="reboot_failed">Riavvio fallito. Usa la funzione riavvia del dispositivo.</string>
     <string name="auto_flash_note">%s sarà flashato automaticamente una volta premuto "OK".</string>
     <string name="reboot_confirmation">Vuoi riavviare ora?</string>
@@ -25,6 +35,7 @@
     <string name="install_known_issue">Sembra esserci un problema noto (\"%s\") con la tua ROM. Installando Xposed potrebbe non funzionare o causare gravi problemi. Clicca qui per dettagli sul problema.</string>
     <string name="framework_active">La versione di Xposed Framework attiva è: %s.</string>
     <string name="framework_not_active">La versione di Xposed Framework installata è %s, ma non è attiva. Perfavore controlla i log per dettagli.</string>
+    <string name="framework_not_installed">Xposed Framework non è installato.</string>
 
     <!-- File operations -->
     <string name="root_failed">Impossibile ottenere l\'accesso root.\n\nAssicurati di avere correttamente i permessi e di non aver bloccato comandi shell.</string>
@@ -98,15 +109,20 @@
     <string name="settings_group_experimental">Sperimentale</string>
     <string name="settings_disable_resources">Disabilita agganci alle risorse</string>
     <string name="settings_disable_resources_summary">Soluzioni di conflitti con i theme engine\n<b>ATTENZIONE:</b> I moduli che cambiano le risorse non funzioneranno attivando questa funzione.</string>
-    <string name="settings_performance_experiment">Esperimento performance</string>
-    <string name="settings_performance_experiment_summary">Se attivi questo, la performance del sistema potrebbe aumentare, diminuire o restare invariata. Sei libero di testarla e segnalarci gli effetti che essa ha avuto. È necessario reinstallare il Framework e riavviare dopo aver cambiato questo.</string>
     <string name="settings_group_app">Applicazione</string>
     <string name="settings_theme">Tema</string>
     <string name="settings_theme_light">Chiaro</string>
     <string name="settings_theme_dark">Scuro</string>
     <string name="settings_theme_black">Nero (utile per schermi AMOLED)</string>
+    <string name="settings_default_view">Vista di default</string>
 
     <!-- Support tab -->
+    <string name="support_modules_label">Supporto per i moduli</string>
+    <string name="support_modules_description">Click lungo su qualsiasi modulo nella lista dei moduli e seleziona \"%1$s\".</string>
+    <string name="support_framework_label">Framework/Installer supporto</string>
+    <string name="support_faq_label">FAQ/Bug conosciuti</string>
+    <string name="support_donate_label">Dona</string>
+    <string name="support_donate_description">Se ti piacerebbe dire grazie per Xposed, puoi donare a rovo89 qui</string>
 
     <!-- Logs tab  -->
     <string name="logs_save_failed">Impossibile scrivere il log sulla scheda SD:</string>
@@ -146,89 +162,52 @@
     <string name="repo_download_failed">Download di %1$s fallito: %2$s</string>
     <string name="repo_load_failed">Impossibile caricare repository da %1$s:\n%2$s</string>
 
+    <string name="warning_installed_on_external_storage">Questo modulo non può essere caricato perché è installato nella memoria SD, per favore spostalo nella memoria interna</string>
+    <string name="view">VEDI</string>
     <string name="export_">Esporta…</string>
     <string name="import_">Importa…</string>
     <string name="export_enabled_modules">Esporta lista moduli attivati</string>
     <string name="import_enabled_modules">Importa lista moduli attivati</string>
     <string name="export_installed_modules">Esporta lista moduli installati</string>
     <string name="import_installed_modules">Importa lista moduli installati</string>
-    <string name="no_backup_found">Nessun backup trovato!</string>
     <string name="no_installed_modules">Non c\'è nessun modulo installato!</string>
+    <string name="no_backup_found">Nessun backup trovato!</string>
     <string name="no_enabled_modules">Non c\'è nessun modulo abilitato!</string>
 
-    <string name="warning_installed_on_external_storage">Questo modulo non può essere caricato perché è installato nella memoria SD, per favore spostalo nella memoria interna</string>
-
-
-    <!-- Support tab -->
-    <string name="support_modules_label">Supporto per i moduli</string>
-    <string name="support_modules_description">Click lungo su qualsiasi modulo nella lista dei moduli e seleziona \"%1$s\".</string>
-    <string name="support_framework_label">Framework/Installer supporto</string>
-    <string name="support_faq_label">FAQ/Bug conosciuti</string>
-    <string name="support_donate_label">Dona</string>
-    <string name="support_donate_description">Se ti piacerebbe dire grazie per Xposed, puoi donare a rovo89 qui</string>
-    <string name="modules_updates_available">Aggiornamenti dei moduli disponibili</string>
-    <string name="nav_item_about">Info su</string>
-    <string name="nav_item_download">Download</string>
-    <string name="nav_item_install">Framework</string>
-    <string name="nav_item_logs">Logs</string>
-    <string name="nav_item_modules">Moduli</string>
-    <string name="nav_item_settings">Impostazioni</string>
-    <string name="nav_item_support">Supporto</string>
-    <string name="settings_default_view">Vista di default</string>
-
-    <string name="view">VEDI</string>
-
-
     <string name="share">Condividi con…</string>
-    <string name="loadingError">Si è verificato un errore nel caricamento della lista degli installer/uninstaller dispnibili.\nNon è possibile accedere a Internet o è un bug lato server</string>
     <string name="permissionNotGranted">Questa funzionalità non funzionerà senza il permesso di scrittura della memoria esterna.</string>
 
-
-    <string name="framework_not_installed">Xposed Framework non è installato.</string>
     <string name="notify_module_update">Abilita notifica aggiornamenti dei moduli</string>
-    <string name="md_back_label">Indietro</string>
-    <string name="md_done_label">Fatto</string>
-    <string name="md_cancel_label">Annulla</string>
-    <string name="md_choose_label">Scegli</string>
-    <string name="md_error_label">Errore</string>
-    <string name="md_custom_label">Custom</string>
-    <string name="md_presets_label">Predefiniti</string>
-    <string name="md_storage_perm_error">La tua app non ha i permessi di scrittura nella memoria interna</string>
+
     <string name="scroll_top">Scorri su</string>
-    <string name="no_bookmark_added">Nessun segnalibro aggiunto</string>
-    <string name="remove_bookmark">Rimuovi segnalibro</string>
-    <string name="undo">Annulla</string>
     <string name="add_bookmark">Aggiungi segnalibro</string>
+    <string name="remove_bookmark">Rimuovi segnalibro</string>
+    <string name="bookmarks">Segnalibri</string>
+    <string name="no_bookmark_added">Nessun segnalibro aggiunto</string>
     <string name="bookmark_added">Segnalibro aggiunto</string>
     <string name="bookmark_removed">Segnalibro rimosso</string>
-    <string name="bookmarks">Segnalibri</string>
+    <string name="undo">Annulla</string>
 
-    <string name="download_remove">Scarica e rimuovi </string>
     <string name="file_is_empty">Il file è vuoto</string>
 
-
     <string name="install_remove">Installa e rimuovi</string>
-
-
+    <string name="download_remove">Scarica e rimuovi </string>
     <string name="module_saved">Modulo salvato in %1$s</string>
-    <string name="navigation_drawer_close">Chiudi navigation drawer</string>
-    <string name="navigation_drawer_open">Apri navigation drawer</string>
+
     <string name="reboot_recovery">Riavvia in recovery</string>
     <string name="loading">Caricamento…</string>
     <string name="chrome_custom_tabs">Chrome Custom Tabs</string>
     <string name="chrome_custom_tabs_summ">Apri link nel browser interno</string>
     <string name="scroll_bottom">Scorri giù</string>
-    <string name="open_drawer">Apri automaticamente il menù laterale</string>
     <string name="open_drawer_summ">Apri automaticamente il menù laterale all\'avvio</string>
+    <string name="open_drawer">Apri automaticamente il menù laterale</string>
     <string name="status">Stato Xposed</string>
-    <string name="xposed_off_next_reboot">Xposed Framework sarà disabilitato al prossimo riavvio</string>
     <string name="xposed_on_next_reboot">Xposed Framework sarà abilitato al prossimo riavvio</string>
-
+    <string name="xposed_off_next_reboot">Xposed Framework sarà disabilitato al prossimo riavvio</string>
 
     <string name="skip_xposedminversion_check">Salta controllo \'xposedminversion\' </string>
     <string name="skip_xposedminversion_check_summ">Salta controllo \'xposedminversion\' per i moduli</string>
-    <string name="details">Dettagli</string>
-    <string name="save">Salva</string>
 
+    <string name="save">Salva</string>
 
 </resources>
