--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
+<resources>
 
     <!-- General/various strings -->
     <string name="menuSend">Отправить</string>
@@ -7,10 +7,10 @@
     <string name="xposed_not_active">Последняя версия Xposed в настоящее время не активна. Уверены, что Вы установили Framework и перезагрузили устройство?</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="tabDownload">Загрузка</string>
     <string name="welcome_framework_update_available">Доступно обновление для Xposed Framework (%s).</string>
+    <string name="modules_updates_available">Доступны обновления модуля</string>
 
-    <!-- navigation view items -->
+    <!-- Navigation drawer items -->
     <string name="nav_item_install">Xposed Framework</string>
     <string name="nav_item_modules">Установленные модули</string>
     <string name="nav_item_download">Поиск модулей</string>
@@ -26,7 +26,6 @@
     <string name="uninstall">Удалить</string>
     <string name="soft_reboot">Быстрая перезагрузка</string>
     <string name="reboot">Полная перезагрузка</string>
-    <string name="phone_not_compatible">Xposed (пока) не совместим с версией Android SDK %1$d или архитектурой процессора (%2$s).</string>
     <string name="reboot_failed">Сбой перезагрузки. Пожалуйста, используйте встроенную функцию перезагрузки на устройстве.</string>
     <string name="auto_flash_note">%s будет прошита автоматически при нажатии "OK".</string>
     <string name="reboot_confirmation">Хотите перезагрузить устройство сейчас?</string>
@@ -36,7 +35,7 @@
     <string name="install_known_issue">Похоже, присутствует известная несовместимость (\"%s\") с Вашей прошивкой. Пожалуй, Вам не стоит устанавливать Xposed. Нажмите здесь для дополнительной информации.</string>
     <string name="framework_active">Xposed Framework версии %s активирован!</string>
     <string name="framework_not_active">Xposed Framework версия %s установлена, но не активирована. Пожалуйста проверьте логи.</string>
-    <string name="modules_updates_available">Доступны обновления модуля</string>
+    <string name="framework_not_installed">Xposed Framework не установлен.</string>
 
     <!-- File operations -->
     <string name="root_failed">"Сбой получения прав рут-доступа.\n\nУбедитесь, что на устройстве есть рут и команды оболочки не блокируются."</string>
@@ -109,8 +108,6 @@
     <string name="settings_group_experimental">Экспериментальное</string>
     <string name="settings_disable_resources">Не изменять ресурсы</string>
     <string name="settings_disable_resources_summary">Временное решение для конфликтов с темами системы\n<b>ВНИМАНИЕ:</b> Модули, которые пытаются изменить ресурсы не будут работать, если эта опция включена.</string>
-    <string name="settings_performance_experiment" tools:ignore="UnusedResources">Эксперимент с производительностью</string>
-    <string name="settings_performance_experiment_summary" tools:ignore="UnusedResources">Если активировать эту опцию, производительность устройства может увеличиться, уменьшиться или остаться на прежнем уровне. Попробуйте и поделитесь достигнутым результатом. Для того чтобы изменения вступили в силу, необходимо переустановить Framework и перезагрузить устройство.</string>
     <string name="settings_group_app">Приложение</string>
     <string name="settings_theme">Тема</string>
     <string name="settings_theme_light">Material светлая</string>
@@ -145,13 +142,13 @@
 
     <!-- DownloadView -->
     <string name="download_view_download">Скачать</string>
-	<string name="download_view_install">Установить</string>
-	<string name="download_view_cancel">Отмена</string>
+    <string name="download_view_install">Установить</string>
+    <string name="download_view_cancel">Отмена</string>
     <string name="download_view_no_url">Нет доступных URL для загрузки</string>
-	<string name="download_view_running">Скачивание и установка (%1$,d из %2$,d кб)</string>
+    <string name="download_view_running">Скачивание и установка (%1$,d из %2$,d кб)</string>
     <string name="download_view_waiting">Ожидает скачивания</string>
-	<string name="download_view_successful">Скачивание завершено</string>
-	<string name="download_view_failed">Ошибка загрузки (ошибка %d)</string>
+    <string name="download_view_successful">Скачивание завершено</string>
+    <string name="download_view_failed">Ошибка загрузки (ошибка %d)</string>
 
     <!-- DownloadUtils -->
     <string name="download_md5sum_incorrect">Сумма MD5 не совпадает (загружено: %1$s, ожидалось: %2$s)</string>
@@ -164,7 +161,6 @@
     <string name="repo_download_failed">Загрузка %1$s прервана: %2$s</string>
     <string name="repo_load_failed">Не могу загрузить репозиторий %1$s:\n%2$s</string>
 
-
     <string name="warning_installed_on_external_storage">Этот модуль не может быть загружен, потому что он установлен на SD-карту, переместите его во внутреннюю память.</string>
     <string name="view">Смотреть</string>
     <string name="export_">Экспорт модулей</string>
@@ -174,27 +170,14 @@
     <string name="export_installed_modules">Экспорт списка установленных модулей</string>
     <string name="import_installed_modules">Импорт списка установленных модулей</string>
     <string name="no_installed_modules">Установленных модулей нет!</string>
-
-
     <string name="no_backup_found">Резервные копии не найдены</string>
     <string name="no_enabled_modules">Нет включенных модулей</string>
 
     <string name="share">Поделиться</string>
-    <string name="loadingError">Ошибка загрузки Zip Xposed Frameworks</string>
     <string name="permissionNotGranted">Эта функция не будет работать без разрешения на запись для накопителя.</string>
 
-
-    <string name="framework_not_installed">Xposed Framework не установлен.</string>
     <string name="notify_module_update">Включить уведомления об обновлении модулей</string>
 
-    <string name="md_back_label">Назад</string>
-	<string name="md_done_label">Готово</string>
-    <string name="md_cancel_label">Отмена</string>
-    <string name="md_choose_label">Выбрать</string>
-	<string name="md_error_label">Ошибка</string>
-	<string name="md_storage_perm_error">Для вашего приложения не предоставлены права на чтение READ_EXTERNAL_STORAGE.</string>
-    <string name="md_custom_label">Пользовательские</string>
-    <string name="md_presets_label">Пресеты</string>
     <string name="scroll_top">Прокрутка вверх</string>
     <string name="add_bookmark">Добавить закладку</string>
     <string name="remove_bookmark">Удалить закладку</string>
@@ -206,11 +189,9 @@
 
     <string name="file_is_empty">Файлов нет</string>
 
-
     <string name="install_remove">Установить и удалить</string>
     <string name="download_remove">Скачать и удалить</string>
     <string name="module_saved">Модуль сохранен в %1$s</string>
-
 
     <string name="reboot_recovery">Перезагрузить в Recovery</string>
     <string name="loading">Загрузка…</string>
@@ -222,7 +203,6 @@
     <string name="status">Состояние Xposed</string>
     <string name="xposed_on_next_reboot">Xposed Framework будет включен после перезагрузки</string>
     <string name="xposed_off_next_reboot">Xposed Framework будет выключен после перезагрузки</string>
-
 
     <string name="skip_xposedminversion_check">Пропускать проверку \'Xposed мин. версии\'</string>
     <string name="skip_xposedminversion_check_summ">Пропустить \'Xposed мин. версии\' проверку модулей</string>
