--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -7,15 +7,15 @@
     <string name="xposed_not_active">Senaste versionen av Xposed är inte aktiverad. Har du installerat ramverket och startat om?</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="tabDownload">Ladda ner</string>
     <string name="welcome_framework_update_available">En uppdatering för Xposed ramverket är tillgänglig (%s).</string>
+
+    <!-- Navigation drawer items -->
 
     <!-- Installer tab -->
     <string name="install">Installera/Uppdatera</string>
     <string name="uninstall">Avinstallera</string>
     <string name="soft_reboot">Mjuk omstart</string>
     <string name="reboot">Omstart</string>
-    <string name="phone_not_compatible">Xposed är inte (ännu) kompatibel med Android SDK version %1$d eller med din processor arkitektur (%2$s).</string>
 
     <!-- File operations -->
 
@@ -59,8 +59,6 @@
     <!-- Settings tab -->
     <string name="settings_group_download">Ladda ner</string>
     <string name="settings_group_experimental">Experimentellt</string>
-    <string name="settings_performance_experiment">Prestanda experiment</string>
-    <string name="settings_performance_experiment_summary">Om du aktiverar det här, kan systemets prestanda antingen öka, minska eller förbli densamma. Känn dig fri att prova och rapportera tillbaka vilken effekt du ser (eller om det finns ingen alls). Du måste installera om ramverket och starta om efter att ha ändrat detta.</string>
 
     <!-- Support tab -->
 
@@ -97,5 +95,14 @@
     <string name="repo_download_failed_http">Nerladdning av %1$s misslyckades: %2$d (%3$s)</string>
     <string name="repo_download_failed">Nerladdning av %1$s misslyckades: %2$s</string>
     <string name="repo_load_failed">Kan inte ladda datakatalog från %1$s:\n%2$s</string>
+
+
+
+
+
+
+
+
+
 
 </resources>
