--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
+<resources>
 
     <!-- General/various strings -->
     <string name="menuSend">ส่ง</string>
@@ -7,10 +7,10 @@
     <string name="xposed_not_active">เวอร์ชั่นล่าสุด Xposed ยังไม่ได้เปิดใช้งาน ต้องการติดตั้งเฟรมเวิร์คและรีบูต?</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="tabDownload">ดาวน์โหลด</string>
     <string name="welcome_framework_update_available">สามารถอัพเดทเฟรมเวิร์ค (%s)</string>
+    <string name="modules_updates_available">สามารถอัพเดทโมดูลได้</string>
 
-    <!-- navigation view items -->
+    <!-- Navigation drawer items -->
     <string name="nav_item_install">เฟรมเวิร์ค</string>
     <string name="nav_item_modules">โมดูล</string>
     <string name="nav_item_download">ดาวน์โหลด</string>
@@ -26,7 +26,6 @@
     <string name="uninstall">ถอนการติดตั้ง</string>
     <string name="soft_reboot">ซอฟท์รีบูต</string>
     <string name="reboot">รีบูต</string>
-    <string name="phone_not_compatible">Xposed ไม่สามารถเข้ากันได้กับเวอร์ชั่น Android SDK %1$d หรือสถาปัตยกรรมประมวลผล (%2$s) ของคุณ</string>
     <string name="reboot_failed">รีบูตล้มเหลว กรุณาใช้ฟังก์ชั่นรีบูตโทรศัพท์</string>
     <string name="auto_flash_note">%s จะแฟลชอัตโนมัติเมื่อคุณกด "ตกลง"</string>
     <string name="reboot_confirmation">ต้องการรีบูตเดี๋ยวนี้?</string>
@@ -36,7 +35,7 @@
     <string name="install_known_issue">ดูเหมือนจะเกิดปัญหา (\"%s\") กับรอมของคุณ การติดตั้ง Xposed อาจจะไม่เวิร์คหรือทำให้เกิดปัญหาร้ายแรง คลิกที่นี่สำหรับรายละเอียดเกี่ยวกับปัญหา</string>
     <string name="framework_active">เฟรมเวิร์คเวอร์ชั่น %s เปิดใช้งานแล้ว</string>
     <string name="framework_not_active">เฟรมเวิร์คเวอร์ชั่น %s ถูกติดตั้งแล้วแต่ยังไม่ได้ใช้งาน กรุณาตรวจสอบบันทึกการใช้งานสำหรับรายละเอียด</string>
-    <string name="modules_updates_available">สามารถอัพเดทโมดูลได้</string>
+    <string name="framework_not_installed">ยังไม่ได้ติดตั้งเฟรมเวิร์ค Xposed</string>
 
     <!-- File operations -->
     <string name="root_failed">การเข้าถึงรูทล้มเหลว\n\nแน่ใจว่าโทรศัพท์ของคุณได้รับการรูทเรียบร้อยแล้วและไม่ได้บล็อคคำสั่ง Shell</string>
@@ -109,8 +108,6 @@
     <string name="settings_group_experimental">ทดลอง</string>
     <string name="settings_disable_resources">ปิดใช้งานการขอทรัพยากร</string>
     <string name="settings_disable_resources_summary">แก้ปัญหาความขัดแย้งกับชุดรูปแบบแอนจิน\n<b>คำเตือน:</b> โมดุลที่จะพยายามเปลี่ยนแปลงทรัพยากรจะไม่ทำงานเมื่อเปิดใช้งาน</string>
-    <string name="settings_performance_experiment" tools:ignore="UnusedResources">ทดสอบประสิทธิภาพการทำงาน</string>
-    <string name="settings_performance_experiment_summary" tools:ignore="UnusedResources">หากเปิดใช้งานประสิทธิภาพการทำงานของระบบจะเพิ่มขึ้น ลดลงหรือเหมือนเดิม อย่าลังเลที่จะทดสอบและรายงานผลที่ได้ คุณจำเป็นต้องติดตั้งเฟรมเวิร์คอีกครั้งและรีบูตเพื่อเปลี่ยนแปลงผล</string>
     <string name="settings_group_app">แอพพลิเคชั่น</string>
     <string name="settings_theme">ธีม</string>
     <string name="settings_theme_light">สว่าง</string>
@@ -164,7 +161,6 @@
     <string name="repo_download_failed">กำลังดาวน์โหลด %1$s ล้มเหลว: %2$s</string>
     <string name="repo_load_failed">ไม่สามารถโหลดที่จัดเก็บจาก %1$s:\n%2$s</string>
 
-
     <string name="warning_installed_on_external_storage">ไม่สามารถโหลดโมดูลนี้เพราะติดตั้งบนการ์ดความจำ กรุณาย้ายไปยังหน่วยความจำภายใน</string>
     <string name="view">แสดง</string>
     <string name="export_">ส่งออก…</string>
@@ -174,27 +170,14 @@
     <string name="export_installed_modules">ส่งออกรายการโมดูลที่ติดตั้ง</string>
     <string name="import_installed_modules">นำเข้ารายการโมดูลที่ติดตั้ง</string>
     <string name="no_installed_modules">ยังไม่ได้ติดตั้งโมดูล</string>
-
-
     <string name="no_backup_found">ไม่พบสำรองข้อมูล</string>
     <string name="no_enabled_modules">ยังไม่มีโมดูลเปิดใช้งาน</string>
 
     <string name="share">แบ่งปันด้วย…</string>
-    <string name="loadingError">ข้อผิดพลาดการโหลดเฟรมเวิร์ค Xposed</string>
     <string name="permissionNotGranted">คุณสมบัตินี้จะไม่ทำงาน หากไม่ได้รับการอนุญาตเพื่อเขียนข้อมูลไปยังที่เก็บข้อมูลภายนอก</string>
 
-
-    <string name="framework_not_installed">ยังไม่ได้ติดตั้งเฟรมเวิร์ค Xposed</string>
     <string name="notify_module_update">เปิดใช้งานการแจ้งเตือนอัพเดทโมดูล</string>
 
-    <string name="md_back_label">กลับ</string>
-    <string name="md_done_label">เสร็จสิ้น</string>
-    <string name="md_cancel_label">ยกเลิก</string>
-    <string name="md_choose_label">เลือก</string>
-    <string name="md_error_label">ผิดพลาด</string>
-    <string name="md_storage_perm_error">แอปพลิเคชั่นของคุณยังไม่ได้รับการอนุญาต READ_EXTERNAL_STORAGE</string>
-    <string name="md_custom_label">ปรับแต่ง</string>
-    <string name="md_presets_label">พรีเช็ท</string>
     <string name="scroll_top">เลื่อนขึ้นบน</string>
     <string name="add_bookmark">เพิ่มบุ๊คมาร์ค</string>
     <string name="remove_bookmark">ลบบุ๊คมาร์ค</string>
@@ -206,11 +189,9 @@
 
     <string name="file_is_empty">ไฟล์ว่างเปล่า</string>
 
-
     <string name="install_remove">ติดตั้งและลบ</string>
     <string name="download_remove">ดาวน์โหลดและลบ</string>
     <string name="module_saved">โมดูลบันทึกที่ %1$s</string>
-
 
     <string name="reboot_recovery">รีบูตไปยังโหมดกู้คืน</string>
     <string name="loading">กำลังโหลด…</string>
@@ -219,5 +200,7 @@
     <string name="scroll_bottom">เลื่อนไปข้างล่าง</string>
     <string name="open_drawer_summ">เปิด Navigation Drawer อัตโนมัติเมื่อเปิดใช้งานแอปพลิเคชั่น</string>
     <string name="open_drawer">เปิด Navigation Drawer อัตโนมัติ</string>
+
+
 
 </resources>
